--- a/site/hello.html
+++ b/site/hello.html
@@ -19,7 +19,7 @@
 	<body>
 		<h1 class="text-center" style="background-color: ##A3F1AA">Hello World</h1>
 <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
-	Hello
+	Hello World
 </div>
 <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
 	Hello
