--- a/site/hello.html
+++ b/site/hello.html
@@ -22,10 +22,10 @@
 	Hello World
 </div>
 <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
-	Hello
+	Hello World
 </div>
 <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
-	Hello
+	Hello World
 </div>
 	
 		<!-- jQuery -->
